Экран создания подписки + выбор валюты
- Добавлен AddSubCreateFragment и ViewModel
- Реализована передача данных (название, логотип) из экрана поиска через Bundle
- Отображение логотипа и названия на экране создания
- Базовая настройка UI и логики создания подписки
- Добавлен выбор валюты через BottomSheet с отображением кода валюты
- Получение дефолтной валюты из настроек
- Объединение всех полей в SubscriptionEntity
- Проверены и доработаны репозиторий, DAO и таблица Room
- По кнопке Save: валидация и сохранение подписки в БД, возврат на главный экран
- Проведён рефакторинг: удалены дубли и устаревший код, мелкие багфиксы

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="feedback_prompt">Вы хотите отправить отзыв?</string>
     <string name="send_email">Отправить по email</string>
     <string name="no_thanks">Нет, спасибо</string>
-
+    <string name="subscription_exists">Такая подписка уже существует</string>
 
 
 
