On the settings screen for the future added enable and disable notifications and time + notification time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,6 @@
     <string name="month_12">December</string>
 
     <string name="month_title">%1$s %2$d</string>
-
+    <string name="notifications_not_enabled">Уведомления не включены</string>
 
 </resources>
